# LLM_project_PDF_chatbot

./: README.md  main.py  pyproject.toml  test.ipynb  test_mmr.ipynb
