[tool.poetry]
name = "pdf-bot"
version = "0.1.0"
description = ""
authors = ["Hyunsoo Jeong <hyeonsuj48@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
langchain = "^0.2.16"
langchain-openai = "^0.1.23"
langchain-community = "^0.2.16"
pypdf = "^4.3.1"
chromadb = "^0.5.5"
gradio = "^4.42.0"
gradio-pdf = "^0.0.13"
langchain-text-splitters = "^0.2.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
